fluxcd/apps/production/landing/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    linkerd.io/inject: enabled
  name: landing
