fluxcd/apps/production/landing/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: landing
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: landing
