fluxcd/apps/production/landing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: www.${DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DOMAIN}
    homelab/public: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      subs_filter "</body>" "<noscript><img src=\"https://shy.wuhoo.xyz/ingress/22c4ce0f-2e1e-4474-b305-13187cf926f8/pixel.gif\"></noscript><script defer src=\"https://shy.wuhoo.xyz/ingress/22c4ce0f-2e1e-4474-b305-13187cf926f8/script.js\"></script></body>";
      proxy_set_header Accept-Encoding "";
      add_header Onion-Location http://${ONION_DOMAIN_WUHOO}$request_uri;
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  labels:
    name: landing
  name: landing-ingress
  namespace: landing
spec:
  ingressClassName: nginx-public
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: landing-service
            port:
              number: 8080
        path: /
        pathType: Prefix
